<resources>
    <string name="app_name">Majika</string>
    <string name="title_twibbon">Twibbon</string>
    <string name="title_restaurant">Restaurant</string>
    <string name="title_menu">Menu</string>
    <string name="title_keranjang">Keranjang</string>
    <string name="title_pembayaran">Pembayaran</string>
    <string name="maps">Maps</string>
    <string name="activity_start">start</string>
    <string name="placeholder">Placeholder</string>
    <string name="menu_food_header">Food</string>
    <string name="menu_drinks_header">Drinks</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="jumlah">Jumlah</string>
    <string name="photo">Take Photo</string>
    <string name="total">Total: </string>
    <string name="bayar">Bayar</string>
    <string name="scan">Scan</string>
    <string name="payment_success">Berhasil</string>
    <string name="payment_failed">Gagal</string>
    <string name="payment_error">Error</string>
    <string name="payment_not_payed">Belum dibayar</string>
    <string name="payment_payed">Sudah dibayar</string>
    <string name="payment_error_qr">QR code tidak sesuai</string>
    <string name="payment_error_network">Network error</string>
    <string name="payment_placeholder">Rp 0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_keranjang">KeranjangActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
