<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_menu">

    <fragment
        android:id="@+id/navigation_twibbon"
        android:name="com.dba.majika.ui.twibbon.TwibbonFragment"
        android:label="@string/title_twibbon"
        tools:layout="@layout/fragment_twibbon" />

    <fragment
        android:id="@+id/navigation_restaurant"
        android:name="com.dba.majika.ui.restaurant.RestaurantFragment"
        android:label="@string/title_restaurant"
        tools:layout="@layout/fragment_restaurant" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.dba.majika.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_keranjang"
        android:name="com.dba.majika.ui.keranjang.KeranjangFragment"
        android:label="@string/title_keranjang"
        tools:layout="@layout/fragment_keranjang">
        <action
            android:id="@+id/action_navigation_keranjang_to_navigation_pembayaran"
            app:destination="@id/navigation_pembayaran" />
    </fragment>

    <fragment
        android:id="@+id/navigation_pembayaran"
        android:name="com.dba.majika.ui.pembayaran.PembayaranFragment"
        android:label="@string/title_pembayaran"
        tools:layout="@layout/fragment_pembayaran" />
</navigation>
