<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/keranjang_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.keranjang.KeranjangFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/keranjang_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_zero"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/keranjang_total"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/keranjang_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_normal"
        android:fontFamily="@font/inter"
        android:text="@string/total"
        android:textSize="@dimen/font_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/keranjang_harga"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/keranjang_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_normal"
        android:layout_marginBottom="@dimen/dp_small"
        android:fontFamily="@font/inter"
        android:text="@string/payment_placeholder"
        android:textSize="@dimen/font_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/keranjang_button_bayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/dp_normal"
        android:background="@color/secondary"
        android:backgroundTint="@color/secondary"
        android:fontFamily="@font/inter"
        android:text="@string/bayar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
